--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0"
